[project]
name = "streamlit-claude-code-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.84.0",
    "faster-whisper>=1.1.0",
    "plotly>=6.2.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.46.1",
]
